# sgx_project_v2

./: .gitignore  CMakeLists.txt  Log.md  Makefile  Makefile.bak  README.md  Thought.md  client_all.h  fuck  note  submission  test  test.c
App/: CMakeLists.txt
App/include/: App_c.h  activations.h  app.h  classifier.h  convolutional_layer.h  cost_layer.h  data.h  e_backward.h  e_forward.h  encrypt_file.h  layer.h  maxpool_layer.h  openssl_crypto.h  rc4.h  types.h  utils.h
App/src/: App.cpp  Enclave_u.c  Enclave_u.h  activation_layer.c  app.cpp  avgpool_layer.c  blas.c  classifier.c  connected_layer.c  convolutional_layer.c  cost_layer.c  data.c  dropout_layer.c  e_backward.c  e_forward.c  ecall_layer_backward.c  ecall_layer_forward.c  encrypt_file.cpp  fast_inference.cpp  gemm.c  image.c  layer.c  local_layer.c  main.cpp  matrix.c  maxpool_layer.c  network.c  openssl_crypto.cpp  option_list.c  parser.c  sgx_err.cpp  submission_1.md  submission_1_tmp.html  test  utils.c
App/src/include/: activations.h  connected_layer.h  data.h  dropout_layer.h  e_backward.h  e_forward.h  ecall_layer_forward.h  encrypt_file.h  gemm.h  image.h  matrix.h  network.h  parser.h  sgx_err.h  type_activation.h  type_define.h  types.h  utils.h
Enclave/: CMakeLists.txt  Enclave.config.xml  Enclave.edl  Enclave_forward.edl  backward.edl  private.pem  public.pem  types.edl
Enclave/edls/: Enclave.edl  forward_auto_generated.edl  types.edl
Enclave/include/: blas.h  dnnl_forward.h  dnnl_utils.h  dnnl_utils.hpp  enclave.h  enclave_crypto.h  im2col.h  layer.h  types.h
Enclave/src/: Enclave_t.c  Enclave_t.h  aes.c  batchnorm_layer.c  blas.c  dnnl_forward.cpp  e_activation.c  e_gemm.c  ecall_batchnorm_layer.cpp  enclave.cpp  enclave_backward.cpp  enclave_crypto.cpp  enclave_forward.cpp  im2col.c  predict_network.cpp  rc4.c  sgx_err.hpp  test.cpp  utils.cpp
Enclave/src/include/: crypto.h  dnnl_forward.h  e_activation.h  e_gemm.h  ecall_batchnorm_layer.h  enclave.h  layer.h  rc4.h  types.h
backup/: mynet.weights  mynet_1.weights  mynet_10.weights  mynet_100.weights  mynet_11.weights  mynet_12.weights  mynet_13.weights  mynet_14.weights  mynet_15.weights  mynet_16.weights  mynet_17.weights  mynet_18.weights  mynet_19.weights  mynet_2.weights  mynet_20.weights  mynet_21.weights  mynet_22.weights  mynet_23.weights  mynet_24.weights  mynet_25.weights  mynet_26.weights  mynet_27.weights  mynet_28.weights  mynet_29.weights  mynet_3.weights  mynet_30.weights  mynet_31.weights  mynet_32.weights  mynet_33.weights  mynet_34.weights  mynet_35.weights  mynet_36.weights  mynet_37.weights  mynet_38.weights  mynet_39.weights  mynet_4.weights  mynet_40.weights  mynet_41.weights  mynet_42.weights  mynet_43.weights  (+62 more)
cfg/: alexnet.cfg  bp_test.cfg  client.cfg  e_bp_test.cfg  e_mynet.cfg  mynet.cfg  mynet_sgx.cfg  server.cfg  test_backward.cfg
client/: CMakeLists.txt  Makefile  client
client/include/: all.h  definition.h  handler.h  log.hpp  parser.hpp  utils.h
client/src/: client_handler.cpp  log.cpp  main.cpp
communication/: CMakeLists.txt
communication/include/: batch_data.hpp  client.hpp  client_all.h  client_handler.h  common.h  definition.h  handler.h  handler.hpp  log.hpp  openssl_crypto.h  parser.hpp  server.h  server_all.h  server_hander.h  utils.h
communication/src/: batch_data.cpp  client.cpp  client_handler.cpp  client_main.cpp  example.cppl  log.cpp  openssl_crypto.cpp  server_handler.cpp  server_main.cpp  utils.cpp
data/: bp_test.cfg  conv_test.cfg  conv_test.csv  conv_test_sgx.cfg  e_conv_test.csv  e_mnist.cfg  e_train.cfg  mnist.cfg  mnist_csv.cfg  p.csv  train.cfg
report/: report#2.md
scripts/: generate_code.py  tmp.py
